--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -474,6 +474,74 @@ i[class^=icon-] {
 /*----------------------------------------
    Text Underline
 -----------------------------------------*/
+
+
+/* social icons css */
+
+.social-sidebar {
+    position: fixed;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(255, 255, 255, 0.274);
+    border-radius: 50px 0 0 50px;
+    padding: 15px 10px;
+    box-shadow: -5px 0 20px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+}
+
+.social-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 45px;
+    height: 45px;
+    margin: 12px 0;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.social-icon i {
+    font-size: 20px;
+    color: white;
+}
+
+.social-icon:hover {
+    transform: scale(1.1);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.instagram {
+    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+}
+
+.facebook {
+    background: #1877f2;
+}
+
+.youtube {
+    background: #ff0000;
+}
+
+.linkedin {
+    background: #0077b5;
+}
+
+.email {
+    background: #ea4335;
+}
+
+.whatsapp {
+    background: #25d366;
+}
+
+
+
+
+
+/* End Social Icons */
 .underline a {
   display: inline;
   background-image: -webkit-gradient(linear, left top, right top, color-stop(0, currentColor), to(currentColor));
@@ -25224,7 +25292,7 @@ html.lenis body {
 .rs-progress-one .rs-progress-bg-thumb {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 500px;
   top: 0;
   inset-inline-start: 0;
   background-position: top center;
